[gd_scene load_steps=12 format=2]

[ext_resource path="res://Shadows/14p shadow.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Dummy.gd" type="Script" id=2]
[ext_resource path="res://Overlap Detection/Hitbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemies/dummy.png" type="Texture" id=6]
[ext_resource path="res://Environment Effects/Blink.gdshader" type="Shader" id=7]
[ext_resource path="res://Sounds/death_sound.tres" type="AudioStream" id=8]

[sub_resource type="ShaderMaterial" id=11]
resource_local_to_scene = true
shader = ExtResource( 7 )
shader_param/active = false

[sub_resource type="CircleShape2D" id=6]
radius = 2.23607

[sub_resource type="CircleShape2D" id=7]
radius = 6.0

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=13]
resource_name = "play"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Dummy" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 11 )
position = Vector2( 0, -8 )
texture = ExtResource( 6 )

[node name="14pShadow" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[node name="Hitbox" parent="." instance=ExtResource( 5 )]
visible = false
collision_layer = 8
collision_mask = 64

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 7 )

[node name="Blink" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 12 )
anims/play = SubResource( 13 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="finished" from="DeathSound" to="." method="_on_DeathSound_finished"]
